# skillgap-analyzer

./: .dockerignore  .gitignore  Dockerfile  README.md  crew.jsonc  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
agents/: career_coach.jsonc  cv_evaluator.jsonc  cv_reader.jsonc  job_description_analyst.jsonc
static/: style.css
templates/: index.html  result.html
tools/: __init__.py  pdf_reader_tool.py
