[project]
name = "skillgap_analyzer"
version = "0.1.0"
description = "SkillGap_Analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]>=1.15.1,<2.0.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.139.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
    "boto3>=1.35.0",    
]

[tool.uv]
link-mode = "copy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agents", "crew.jsonc", "tools", "knowledge", "skills"]

[tool.crewai]
type = "crew"
definition = "crew.jsonc"
